Bug 536623 and bug 537141.  Don't attempt to maybe-create textframes for kids of parents that have xbl childlists on insert and append: we know we didn't skip creating any frames that didn't need skipping unconditionally in that situation, and trying to create them can put them in the wrong place.  r=roc